docs: README.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maestrale",
   "version": "0.0.0",
-  "description": "Maestrale Simulator Kit for Azurlane",
+  "description": "Maestrale Kit for Azurlane",
   "keywords": [
     "azurlane"
   ],
