--- a/package.json
+++ b/package.json
@@ -1,37 +1,10 @@
 {
-  "name": "maestrale",
-  "version": "0.0.1",
-  "description": "Maestrale Kit for Azurlane",
-  "keywords": [
-    "azurlane"
-  ],
-  "author": "KazariEX",
-  "repository": "KazariEX/maestrale",
-  "license": "MIT",
+  "private": true,
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
-  },
-  "files": [
-    "dist"
-  ],
   "packageManager": "pnpm@9.12.0",
   "scripts": {
-    "build": "tsup-node",
-    "dev": "tsup-node --watch",
-    "prepack": "pnpm run build",
     "release": "bumpp --no-push -c \"release: v%s\"",
-    "test": "vitest",
     "vvvip": "node scripts/vvvip.js"
-  },
-  "dependencies": {
-    "@vue/reactivity": "^3.5.12"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
@@ -39,7 +12,6 @@
     "@zinkawaii/eslint-config": "^0.1.7",
     "bumpp": "^9.8.1",
     "eslint": "^9.14.0",
-    "tsup": "^8.3.5",
-    "vitest": "^2.1.4"
+    "tsup": "^8.3.5"
   }
 }
