--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@antfu/eslint-config": "^3.8.0",
     "@types/node": "^22.9.0",
     "@zinkawaii/eslint-config": "^0.1.7",
+    "@zinkawaii/stylelint-config": "^0.1.5",
     "bumpp": "^9.8.1",
     "eslint": "^9.14.0",
+    "stylelint": "^16.10.0",
     "tsup": "^8.3.5"
   }
 }
