--- a/simulator/package.json
+++ b/simulator/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.1",
+    "@vueuse/core": "^11.2.0",
     "pinia": "^2.2.6",
     "primevue": "^4.2.1",
     "vue": "^3.5.12",
@@ -17,7 +18,9 @@
     "@nuxt/icon": "^1.7.0",
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.7.0",
+    "@primevue/nuxt-module": "^4.2.1",
     "@unocss/nuxt": "^0.64.0",
+    "@vueuse/nuxt": "^11.2.0",
     "nuxt": "^3.14.159",
     "unocss": "^0.64.0"
   }
