chore: 调整发布脚本

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "build": "tsup-node",
     "dev": "tsup-node --watch",
-    "prepack": "pnpm run build"
+    "prepack": "pnpm run build",
+    "release": "bumpp --no-push -c \"release: v%s\""
   },
   "dependencies": {
     "@vue/reactivity": "^3.5.12"
