--- a/simulator/package.json
+++ b/simulator/package.json
@@ -7,23 +7,24 @@
     "preview": "nuxi preview"
   },
   "dependencies": {
-    "@primevue/themes": "^4.2.1",
+    "@primevue/themes": "^4.2.2",
     "@vueuse/core": "^11.2.0",
     "pinia": "^2.2.6",
-    "primevue": "^4.2.1",
-    "vue": "^3.5.12",
+    "primevue": "^4.2.2",
+    "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.6.0",
-    "@nuxt/icon": "^1.7.0",
+    "@nuxt/icon": "^1.8.0",
     "@nuxt/image": "^1.8.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.7.0",
-    "@primevue/nuxt-module": "^4.2.1",
-    "@unocss/nuxt": "^0.64.0",
+    "@primevue/nuxt-module": "^4.2.2",
+    "@unocss/nuxt": "^0.64.1",
     "@vueuse/nuxt": "^11.2.0",
     "nuxt": "^3.14.159",
-    "unocss": "^0.64.0"
+    "unocss": "^0.64.1"
   }
 }
