--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.{ico,jpg,png,webp} filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
