--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "packageManager": "pnpm@9.12.0",
   "scripts": {
-    "vvvip": "node scripts/vvvip.js"
+    "vvvip": "node scripts/vvvip.js",
+    "vvvip:update": "pnpm run vvvip --update"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
@@ -11,8 +12,10 @@
     "@zinkawaii/eslint-config": "^0.1.9",
     "@zinkawaii/stylelint-config": "^0.2.2",
     "bumpp": "^9.9.2",
+    "consola": "^3.3.1",
     "eslint": "^9.17.0",
     "stylelint": "^16.12.0",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "undici": "^7.2.0"
   }
 }
