--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "packageManager": "pnpm@9.12.0",
   "scripts": {
-    "resource:check": "node scripts/resource.js",
-    "vvvip": "node scripts/vvvip.js",
+    "resource:check": "tsx scripts/resource.ts",
+    "vvvip": "tsx scripts/vvvip.ts",
     "vvvip:update": "pnpm run vvvip --update"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
+    "@ast-grep/napi": "^0.32.2",
     "@types/node": "^22.10.2",
     "@zinkawaii/eslint-config": "^0.1.9",
     "@zinkawaii/stylelint-config": "^0.2.2",
@@ -17,6 +18,7 @@
     "eslint": "^9.17.0",
     "stylelint": "^16.12.0",
     "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
     "undici": "^7.2.0"
   }
 }
