chore(data): 将游戏数据作为单独的包体发布
^ Conflicts:
^	packages/data/package.json

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,7 @@
     "release": "bumpp --no-push -c \"release: v%s\""
   },
   "dependencies": {
+    "@maestrale/data": "workspace:^",
     "@vue/reactivity": "^3.5.13"
   }
 }
