--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.12.0",
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
     "assets:check": "tsx scripts/assets.ts",
     "vvvip": "tsx scripts/vvvip.ts",
     "vvvip:update": "pnpm run vvvip --update"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.13.0",
-    "@types/node": "^22.10.5",
-    "@zinkawaii/eslint-config": "^0.1.9",
-    "@zinkawaii/stylelint-config": "^0.2.2",
-    "bumpp": "^9.10.0",
-    "consola": "^3.3.3",
-    "eslint": "^9.18.0",
-    "stylelint": "^16.12.0",
-    "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
-    "undici": "^7.2.1"
+    "@antfu/eslint-config": "^4.3.0",
+    "@types/node": "^22.13.5",
+    "@zinkawaii/eslint-config": "^0.2.0",
+    "@zinkawaii/stylelint-config": "^0.3.0",
+    "bumpp": "^10.0.3",
+    "consola": "^3.4.0",
+    "eslint": "^9.21.0",
+    "stylelint": "^16.14.1",
+    "tsup": "^8.3.6",
+    "tsx": "^4.19.3",
+    "undici": "^7.3.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
