--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.8",
     "@zinkawaii/eslint-config": "^0.2.0",
     "@zinkawaii/stylelint-config": "^0.3.0",
     "bumpp": "^10.0.3",
     "consola": "^3.4.0",
     "eslint": "^9.21.0",
-    "stylelint": "^16.14.1",
-    "tsup": "^8.3.6",
+    "stylelint": "^16.15.0",
+    "tsup": "^8.4.0",
     "tsx": "^4.19.3",
-    "undici": "^7.3.0"
+    "undici": "^7.4.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "@parcel/watcher",
+      "esbuild",
+      "sharp"
     ]
   }
 }
