--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "consola": "^3.4.0",
     "eslint": "^9.21.0",
     "stylelint": "^16.15.0",
-    "tsup": "^8.4.0",
+    "tsdown": "^0.8.0",
     "tsx": "^4.19.3",
     "undici": "^7.4.0"
   },
