chore: 切换至 pnpm catalog，更新依赖

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,6 @@
   },
   "dependencies": {
     "@maestrale/data": "workspace:^",
-    "@vue/reactivity": "^3.5.13"
+    "@vue/reactivity": "catalog:"
   }
 }
