--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.8.1",
   "scripts": {
     "assets:check": "tsx scripts/assets.ts",
     "vvvip": "tsx scripts/vvvip.ts",
     "vvvip:update": "pnpm run vvvip --update"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.3.0",
-    "@types/node": "^22.13.8",
-    "@zinkawaii/eslint-config": "^0.2.0",
-    "@zinkawaii/stylelint-config": "^0.3.0",
-    "@zinkawaii/tsconfig": "^0.0.1",
-    "bumpp": "^10.0.3",
-    "consola": "^3.4.0",
-    "eslint": "^9.21.0",
-    "stylelint": "^16.15.0",
-    "tsdown": "^0.8.0",
-    "tsx": "^4.19.3",
-    "undici": "^7.4.0"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "esbuild",
-      "sharp"
-    ]
+    "@antfu/eslint-config": "catalog:",
+    "@types/node": "catalog:",
+    "@zinkawaii/eslint-config": "catalog:",
+    "@zinkawaii/stylelint-config": "catalog:",
+    "@zinkawaii/tsconfig": "catalog:",
+    "bumpp": "catalog:",
+    "consola": "catalog:",
+    "eslint": "catalog:",
+    "stylelint": "catalog:",
+    "tsdown": "catalog:",
+    "tsx": "catalog:",
+    "undici": "catalog:"
   }
 }
