--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,42 @@
 packages:
   - packages/*
   - simulator
+
+catalog:
+  "@antfu/eslint-config": ^4.12.0
+  "@nuxt/devtools": ^2.4.0
+  "@nuxt/icon": ^1.12.0
+  "@nuxt/image": ^1.10.0
+  "@pinia/nuxt": ^0.10.1
+  "@primevue/nuxt-module": ^4.3.3
+  "@primevue/themes": ^4.3.3
+  "@types/node": ^22.14.1
+  "@unocss/nuxt": ^66.0.0
+  "@vue/reactivity": ^3.5.13
+  "@vueuse/core": ^12.8.2
+  "@vueuse/nuxt": ^12.8.2
+  "@zinkawaii/eslint-config": ^0.2.2
+  "@zinkawaii/stylelint-config": ^0.3.1
+  "@zinkawaii/tsconfig": ^0.0.1
+  bumpp: ^10.1.0
+  consola: ^3.4.2
+  eslint: ^9.25.0
+  nuxt: ^3.16.2
+  pinia: ^3.0.2
+  pinia-plugin-persistedstate: ^4.2.0
+  primevue: ^4.3.3
+  sass: ^1.86.3
+  stylelint: ^16.18.0
+  tsdown: ^0.8.1
+  tsx: ^4.19.3
+  undici: ^7.8.0
+  unocss: ^66.0.0
+  vue: ^3.5.13
+  vue-draggable-plus: ^0.6.0
+  vue-router: ^4.5.0
+  vue-tsc: ^2.2.8
+
+onlyBuiltDependencies:
+  - "@parcel/watcher"
+  - esbuild
+  - sharp
