chore: 并行运行开发脚本，借助 `publishConfig.exports` 在开发时显式链接类型

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@10.10.0",
   "scripts": {
     "build": "pnpm --filter maestrale... build",
-    "dev": "pnpm --filter maestrale... dev",
+    "dev": "pnpm --filter maestrale... --parallel dev",
     "assets:check": "tsx scripts/assets.ts",
     "vvvip": "tsx scripts/vvvip.ts",
     "vvvip:update": "pnpm run vvvip --update"
