--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,7 @@
     "azurlane"
   ],
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./src/index.ts"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -18,6 +18,11 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "exports": {
+      ".": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown -w",
