--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": "KazariEX/maestrale",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./src/index.ts"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -15,6 +15,11 @@
     "dist",
     "generated"
   ],
+  "publishConfig": {
+    "exports": {
+      ".": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown -w",
