--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,36 +7,37 @@ catalog:
   "@nuxt/devtools": ^2.4.0
   "@nuxt/icon": ^1.12.0
   "@nuxt/image": ^1.10.0
-  "@pinia/nuxt": ^0.10.1
+  "@pinia/nuxt": ^0.11.0
   "@primevue/nuxt-module": ^4.3.3
   "@primevue/themes": ^4.3.3
-  "@types/node": ^22.14.1
+  "@types/node": ^22.15.3
   "@unocss/nuxt": ^66.0.0
   "@vue/reactivity": ^3.5.13
-  "@vueuse/core": ^12.8.2
-  "@vueuse/nuxt": ^12.8.2
-  "@zinkawaii/eslint-config": ^0.2.2
+  "@vueuse/core": ^13.1.0
+  "@vueuse/nuxt": ^13.1.0
+  "@zinkawaii/eslint-config": ^0.2.3
   "@zinkawaii/stylelint-config": ^0.3.1
   "@zinkawaii/tsconfig": ^0.0.1
   bumpp: ^10.1.0
   consola: ^3.4.2
-  eslint: ^9.25.0
-  nuxt: ^3.16.2
+  eslint: ^9.25.1
+  nuxt: ^3.17.1
   pinia: ^3.0.2
   pinia-plugin-persistedstate: ^4.2.0
   primevue: ^4.3.3
-  sass: ^1.86.3
-  stylelint: ^16.18.0
-  tsdown: ^0.8.1
-  tsx: ^4.19.3
+  sass: ^1.87.0
+  stylelint: ^16.19.1
+  tsdown: ^0.10.1
+  tsx: ^4.19.4
   undici: ^7.8.0
   unocss: ^66.0.0
   vue: ^3.5.13
   vue-draggable-plus: ^0.6.0
-  vue-router: ^4.5.0
-  vue-tsc: ^2.2.8
+  vue-router: ^4.5.1
+  vue-tsc: ^2.2.10
 
 onlyBuiltDependencies:
   - "@parcel/watcher"
   - esbuild
   - sharp
+  - unrs-resolver
