--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,6 +16,7 @@ catalog:
   "@vueuse/core": ^13.1.0
   "@vueuse/nuxt": ^13.1.0
   "@zinkawaii/eslint-config": ^0.2.3
+  "@zinkawaii/scripts": ^0.0.2
   "@zinkawaii/stylelint-config": ^0.3.1
   "@zinkawaii/tsconfig": ^0.0.1
   bumpp: ^10.1.0
