--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maestrale/data",
   "type": "module",
-  "version": "8.2.275",
+  "version": "0.0.0",
   "author": "KazariEX",
   "license": "MIT",
   "repository": "KazariEX/maestrale",
@@ -13,7 +13,9 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "generated"
+    "generated",
+    "resources",
+    "scripts"
   ],
   "publishConfig": {
     "exports": {
@@ -23,6 +25,11 @@
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown -w",
+    "postinstall": "node scripts/index.js",
     "prepack": "pnpm run build"
+  },
+  "devDependencies": {
+    "maestrale": "workspace:^",
+    "undici": "catalog:"
   }
 }
