--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown -w",
-    "prepack": "pnpm run build",
-    "release": "bumpp --no-push -c \"release: v%s\""
+    "prepack": "pnpm run build"
   },
   "dependencies": {
     "@maestrale/data": "workspace:^",
