--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maestrale/data",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.1.3",
   "author": "KazariEX",
   "license": "MIT",
   "repository": "KazariEX/maestrale",
@@ -13,9 +13,8 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "generated",
-    "resources",
-    "scripts"
+    "scripts",
+    "**/.gitkeep"
   ],
   "publishConfig": {
     "exports": {
