--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,17 +1,19 @@
+shamefullyHoist: true
+
 packages:
   - packages/*
   - simulator
 
 catalog:
-  "@antfu/eslint-config": ^4.12.0
+  "@antfu/eslint-config": ^4.12.1
   "@nuxt/devtools": ^2.4.0
   "@nuxt/icon": ^1.12.0
   "@nuxt/image": ^1.10.0
   "@pinia/nuxt": ^0.11.0
+  "@primeuix/themes": ^1.0.3
   "@primevue/nuxt-module": ^4.3.3
-  "@primevue/themes": ^4.3.3
-  "@types/node": ^22.15.3
-  "@unocss/nuxt": ^66.0.0
+  "@types/node": ^22.15.11
+  "@unocss/nuxt": ^66.1.0
   "@vue/reactivity": ^3.5.13
   "@vueuse/core": ^13.1.0
   "@vueuse/nuxt": ^13.1.0
@@ -21,17 +23,17 @@ catalog:
   "@zinkawaii/tsconfig": ^0.0.2
   bumpp: ^10.1.0
   consola: ^3.4.2
-  eslint: ^9.25.1
-  nuxt: ^3.17.1
+  eslint: ^9.26.0
+  nuxt: ^3.17.2
   pinia: ^3.0.2
   pinia-plugin-persistedstate: ^4.2.0
   primevue: ^4.3.3
   sass: ^1.87.0
   stylelint: ^16.19.1
-  tsdown: ^0.10.2
+  tsdown: ^0.11.0
   tsx: ^4.19.4
   undici: ^7.8.0
-  unocss: ^66.0.0
+  unocss: ^66.1.0
   vue: ^3.5.13
   vue-draggable-plus: ^0.6.0
   vue-router: ^4.5.1
