--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown -w",
-    "postinstall": "node scripts/index.js",
+    "postinstall": "node scripts/postinstall.js",
     "prepack": "pnpm run build"
   },
   "devDependencies": {
