feat(simulator): 斩杀率计算页

--- a/simulator/package.json
+++ b/simulator/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev --no-qr",
+    "prebuild": "pnpm --filter @maestrale/excalc build",
     "prepare": "nuxi prepare",
     "preview": "nuxi preview",
     "tscheck": "vue-tsc"
