--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -21,6 +21,7 @@ catalog:
   "@zinkawaii/scripts": ^0.0.2
   "@zinkawaii/stylelint-config": ^0.3.1
   "@zinkawaii/tsconfig": ^0.0.2
+  assemblyscript: 0.27.36
   bumpp: ^10.1.1
   consola: ^3.4.2
   eslint: ^9.27.0
