--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,16 +4,19 @@ packages:
   - packages/*
   - simulator
 
+overrides:
+  "@rolldown/pluginutils": 1.0.0-beta.10
+
 catalog:
-  "@antfu/eslint-config": ^4.13.2
-  "@nuxt/devtools": ^2.4.1
+  "@antfu/eslint-config": ^4.14.1
+  "@nuxt/devtools": ^2.5.0
   "@nuxt/icon": ^1.13.0
   "@nuxt/image": ^1.10.0
-  "@pinia/nuxt": ^0.11.0
+  "@pinia/nuxt": ^0.11.1
   "@primeuix/themes": ^1.1.1
-  "@primevue/nuxt-module": ^4.3.4
-  "@types/node": ^22.15.24
-  "@unocss/nuxt": ^66.1.2
+  "@primevue/nuxt-module": ^4.3.5
+  "@types/node": ^22.15.30
+  "@unocss/nuxt": ^66.1.3
   "@vue/reactivity": ^3.5.16
   "@vueuse/core": ^13.3.0
   "@vueuse/nuxt": ^13.3.0
@@ -24,17 +27,17 @@ catalog:
   assemblyscript: 0.27.36
   bumpp: ^10.1.1
   consola: ^3.4.2
-  eslint: ^9.27.0
-  nuxt: ^3.17.4
-  pinia: ^3.0.2
+  eslint: ^9.28.0
+  nuxt: ^3.17.5
+  pinia: ^3.0.3
   pinia-plugin-persistedstate: ^4.3.0
-  primevue: ^4.3.4
-  sass: ^1.89.0
-  stylelint: ^16.19.1
-  tsdown: ^0.12.4
+  primevue: ^4.3.5
+  sass: ^1.89.1
+  stylelint: ^16.20.0
+  tsdown: ^0.12.7
   tsx: ^4.19.4
   undici: ^7.10.0
-  unocss: ^66.1.2
+  unocss: ^66.1.3
   vue: ^3.5.16
   vue-draggable-plus: ^0.6.0
   vue-router: ^4.5.1
