--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown -w",
-    "prepack": "pnpm run build"
+    "prepack": "pnpm run build",
+    "test": "vitest"
   },
   "dependencies": {
     "@maestrale/data": "workspace:^",
