--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -38,6 +38,7 @@ catalog:
   tsx: ^4.20.3
   undici: ^7.10.0
   unocss: ^66.2.0
+  vitest: ^3.2.4
   vue: ^3.5.16
   vue-draggable-plus: ^0.6.0
   vue-router: ^4.5.1
