--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,45 +4,45 @@ packages:
   - packages/*
   - simulator
 
-overrides:
-  "@rolldown/pluginutils": 1.0.0-beta.10
+patchedDependencies:
+  "@primevue/nuxt-module": patches/@primevue__nuxt-module.patch
 
 catalog:
-  "@antfu/eslint-config": ^4.16.1
-  "@nuxt/devtools": ^2.6.0
+  "@antfu/eslint-config": ^5.0.0
+  "@nuxt/devtools": ^2.6.2
   "@nuxt/icon": ^1.15.0
   "@nuxt/image": ^1.10.0
-  "@pinia/nuxt": ^0.11.1
-  "@primeuix/themes": ^1.1.2
-  "@primevue/nuxt-module": ^4.3.5
-  "@types/node": ^24.0.7
-  "@unocss/nuxt": ^66.3.2
-  "@vue/reactivity": ^3.5.17
-  "@vueuse/core": ^13.4.0
-  "@vueuse/nuxt": ^13.4.0
+  "@pinia/nuxt": ^0.11.2
+  "@primeuix/themes": ^1.2.1
+  "@primevue/nuxt-module": ^4.3.6
+  "@types/node": ^24.1.0
+  "@unocss/nuxt": ^66.3.3
+  "@vue/reactivity": ^3.5.18
+  "@vueuse/core": ^13.5.0
+  "@vueuse/nuxt": ^13.5.0
   "@zinkawaii/eslint-config": ^0.3.0
   "@zinkawaii/scripts": ^0.0.2
-  "@zinkawaii/stylelint-config": ^0.3.2
+  "@zinkawaii/stylelint-config": ^0.3.3
   "@zinkawaii/tsconfig": ^0.0.2
   assemblyscript: 0.27.36
   bumpp: ^10.2.0
   consola: ^3.4.2
-  eslint: ^9.30.0
-  nuxt: ^3.17.5
+  eslint: ^9.32.0
+  nuxt: ^4.0.1
   pinia: ^3.0.3
-  pinia-plugin-persistedstate: ^4.4.0
-  primevue: ^4.3.5
+  pinia-plugin-persistedstate: ^4.4.1
+  primevue: ^4.3.6
   sass: ^1.89.2
-  stylelint: ^16.21.0
-  tsdown: ^0.12.9
+  stylelint: ^16.22.0
+  tsdown: ^0.13.0
   tsx: ^4.20.3
-  undici: ^7.11.0
-  unocss: ^66.3.2
+  undici: ^7.12.0
+  unocss: ^66.3.3
   vitest: ^3.2.4
-  vue: ^3.5.17
+  vue: ^3.5.18
   vue-draggable-plus: ^0.6.0
   vue-router: ^4.5.1
-  vue-tsc: ^2.2.10
+  vue-tsc: ^3.0.4
 
 onlyBuiltDependencies:
   - "@parcel/watcher"
