--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,22 +4,19 @@ packages:
   - packages/*
   - simulator
 
-patchedDependencies:
-  "@primevue/nuxt-module": patches/@primevue__nuxt-module.patch
-
 catalog:
-  "@antfu/eslint-config": ^5.2.1
+  "@antfu/eslint-config": ^5.3.0
   "@nuxt/devtools": ^2.6.3
   "@nuxt/icon": ^2.0.0
   "@nuxt/image": ^1.11.0
   "@pinia/nuxt": ^0.11.2
   "@primeuix/themes": ^1.2.3
-  "@primevue/nuxt-module": ^4.3.7
-  "@types/node": ^24.3.0
-  "@unocss/nuxt": ^66.4.2
-  "@vue/reactivity": ^3.5.19
-  "@vueuse/core": ^13.7.0
-  "@vueuse/nuxt": ^13.7.0
+  "@primevue/nuxt-module": ^4.3.9
+  "@types/node": ^24.5.2
+  "@unocss/nuxt": ^66.5.1
+  "@vue/reactivity": ^3.5.21
+  "@vueuse/core": ^13.9.0
+  "@vueuse/nuxt": ^13.9.0
   "@zinkawaii/eslint-config": ^0.4.1
   "@zinkawaii/scripts": ^0.0.3
   "@zinkawaii/stylelint-config": ^0.3.3
@@ -27,25 +24,25 @@ catalog:
   assemblyscript: 0.27.36
   bumpp: ^10.2.3
   consola: ^3.4.2
-  eslint: ^9.33.0
-  nuxt: ^4.0.3
+  eslint: ^9.35.0
+  nuxt: ^4.1.2
   pinia: ^3.0.3
   pinia-plugin-persistedstate: ^4.5.0
-  primevue: ^4.3.7
-  sass: ^1.90.0
-  stylelint: ^16.23.1
-  tsdown: ^0.14.1
-  tsx: ^4.20.4
-  undici: ^7.14.0
-  unocss: ^66.4.2
+  primevue: ^4.3.9
+  sass: ^1.92.1
+  stylelint: ^16.24.0
+  tsdown: ^0.15.2
+  tsx: ^4.20.5
+  undici: ^7.16.0
+  unocss: ^66.5.1
   vitest: ^3.2.4
-  vue: ^3.5.19
+  vue: ^3.5.21
   vue-draggable-plus: ^0.6.0
   vue-router: ^4.5.1
-  vue-tsc: ^3.0.6
+  vue-tsc: ^3.0.7
 
 onlyBuiltDependencies:
   - "@parcel/watcher"
   - esbuild
+  - rolldown
   - sharp
-  - unrs-resolver
