--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,17 +10,18 @@
     "azurlane"
   ],
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "publishConfig": {
     "exports": {
-      ".": "./dist/index.js"
+      ".": "./dist/index.js",
+      "./package.json": "./package.json"
     }
   },
   "scripts": {
