feat(simulator): 引入 Anime.js 优化弹窗动画

--- a/simulator/package.json
+++ b/simulator/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@primeuix/themes": "catalog:",
     "@vueuse/core": "catalog:",
+    "animejs": "catalog:",
     "pinia": "catalog:",
     "pinia-plugin-persistedstate": "catalog:",
     "primevue": "catalog:",
