--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,6 +20,7 @@ catalog:
   "@zinkawaii/scripts": ^0.0.3
   "@zinkawaii/stylelint-config": ^0.3.4
   "@zinkawaii/tsconfig": ^0.0.2
+  animejs: ^4.2.2
   assemblyscript: 0.27.36
   bumpp: ^10.3.2
   consola: ^3.4.2
